fixed back-top-btn, scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -69,6 +69,29 @@ html {
   overflow-x: hidden;
 }
 
+/* Scrollbar Style */
+::-webkit-scrollbar {
+  width: 12px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: var(--second-bg-color);
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--portfolio-bg);
+  border-radius: 10px;
+  box-shadow: 0 0 5px var(--thumb-shadow), 0 0 10px var(--neon-box-shadow);
+  transition: background-color 0.5s ease, transform 0.5s ease;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: var(--hover-color);
+  /* Warna thumb saat hover */
+  transform: scale(1.1);
+}
+
 body {
   background-color: var(--bg-color);
   color: var(--text-color);
@@ -925,19 +948,15 @@ span {
 
   .slide p {
     padding: 0 60px;
-    /* Padding lebih kecil untuk layar tablet */
   }
 
   .testimonial {
     padding: 30px 0;
-    /* Sesuaikan padding untuk layar tablet lebih kecil */
     max-width: 700px;
-    /* Membatasi lebar untuk layar yang lebih kecil */
   }
 
   .testimonial .image {
     height: 120px;
-    /* Mengurangi ukuran gambar */
     width: 120px;
   }
 }
@@ -1244,6 +1263,62 @@ form button:hover {
 }
 
 /* FOOTER END */
+
+/* BACK TO TOP BUTTON STYLES */
+.back-top-btn {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  width: 50px;
+  /* Ukuran tombol */
+  height: 50px;
+  background-color: var(--portfolio-bg);
+  color: var(--text-color);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  border: 2px solid var(--hover-color);
+  transition: all 0.3s ease;
+  z-index: 1000;
+  font-size: 24px;
+  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+  opacity: 0;
+  pointer-events: none;
+}
+
+.back-top-btn.active {
+  opacity: 1;
+  pointer-events: auto;
+  transform: translateY(-10px);
+}
+
+.back-top-btn:hover {
+  background-color: var(--hover-color);
+  /* Warna saat hover */
+  transform: scale(1.1);
+  /* Efek memperbesar saat hover */
+  box-shadow: 0 0 15px var(--hover-color);
+  /* Efek bayangan saat hover */
+}
+
+@media (max-width: 768px) {
+  .back-top-btn {
+    width: 40px;
+    height: 40px;
+  }
+
+  .back-top-btn i {
+    font-size: 20px;
+  }
+}
+
+.content {
+  height: 1500px;
+  padding: 20px;
+  font-family: Arial, sans-serif;
+}
+
 
 /* BREAKPOINTS */
 @media (max-width: 991px) {
